# kfilemetadata

./: CMakeLists.txt
autotests/: CMakeLists.txt
src/: CMakeLists.txt  propertyinfo.h  typeinfo.cpp  typeinfo.h
src/extractors/: epubextractor.h  exiv2extractor.cpp  ffmpegextractor.cpp  office2007extractor.cpp  officeextractor.cpp  popplerextractor.cpp  taglibextractor.cpp
